# fastapi-async-template

./: .coveragerc  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: .env.template
docker/postgres/: init-postgres.sql
docker/python/: Dockerfile
migrations/: env.py
migrations/versions/: 2471e5f41286_create_users_table.py  3475271eed31_create_users_table.py  e27d394a20e9_add_unique_on_email_column.py  e937fb914e9a_create_users_table.py  f95f72e77a40_create_user_revision.py
src/adapters/: orm.py
src/apps/jwt/: routers.py
src/apps/users/: models.py  routers.py  services.py
src/core/: exceptions.py  models.py
src/data_access/: __init__.py  abstract.py  sqlalchemy.py  user.py
src/database/: connection.py
src/dependencies/: auth.py  database.py  user.py  users.py
src/models/: __init__.py  abstract.py  auth.py  base.py  user.py
src/routers/: jwt.py  user.py
src/routes/: auth.py  user.py
src/schemas/: __init__.py  base.py  jwt.py  user.py
src/services/: __init__.py  auth.py  exceptions.py  user.py
src/settings/: __init__.py  alembic.py  auth.py  database.py  jwt.py
tests/: conftest.py
tests/integration/test_routes/: conftest.py  test_auth.py  test_user.py
tests/integration/test_services/: conftest.py  test_auth.py  test_user.py
tests/test_apps/test_users/: test_routers.py
tests/unit/test_schemas/: test_user.py
