[tool.poetry]
name = "fastapitemplate"
version = "0.1.0"
description = "FastAPI async template"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
sqlmodel = "^0.0.6"
black = "^22.3.0"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
asyncpg = "^0.25.0"
uvicorn = "^0.17.6"
passlib = "^1.7.4"
greenlet = "^1.1.2"
email-validator = "^1.2.1"
bcrypt = "^3.2.2"
python-dateutil = "^2.8.2"
pytest = "^7.1.2"
httpx = "^0.23.0"
pytest-asyncio = "^0.18.3"
psycopg2 = "^2.9.3"
fastapi-another-jwt-auth = "^0.1.6"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
